--- a/_posts/2024/学习分享.md
+++ b/_posts/2024/学习分享.md
@@ -4,7 +4,8 @@ title:      "2024的资料"
 subtitle:   "learning is a process"
 date:       2015-01-29 12:00:00
 author:     "Sat"
-header-img: "https://i.pximg.net/img-master/img/2011/07/30/04/29/24/20684662_p0_master1200.jpg"
+catalog:     true
+header-img:"https://i.pximg.net/img-master/img/2011/07/30/04/29/24/20684662_p0_master1200.jpg"
 tags:
     - learning 
 ---
