--- a/_posts/2024/学习分享.md
+++ b/_posts/2024/学习分享.md
@@ -3,6 +3,7 @@ layout:     post
 title:      "2024的资料"
 subtitle:   "learning is a process"
 header-style: text
+catalog:      true
 author:     "Sat"
 header-img:"https://i.pximg.net/img-master/img/2011/07/30/04/29/24/20684662_p0_master1200.jpg"
 tags:
