--- a/_posts/2024/学习分享.md
+++ b/_posts/2024/学习分享.md
@@ -1,11 +1,12 @@
 ---
 layout:     post
-title:      "2024的学习点滴"
-author:     "55555"
-header-img:"https://i.pximg.net/img-master/img/2011/07/30/04/29/24/20684662_p0_master1200.jpg"
-catalog:      true
+title:      "学习点滴2024"
+subtitle:   " \a day\""
+author:     "Sat"
+header-img: "img/20684662_p0_master1200.jpg"
+catalog: true
 tags:
-    - learning method
+    - learning
 ---
 
 # 学习分享
